Fixed spacing and view in mobile version

--- a/cotravelling/static/cotravelling/scss/base.scss
+++ b/cotravelling/static/cotravelling/scss/base.scss
@@ -14,13 +14,14 @@ body {
 }
 
 .btn_action {
-    background-color: #E2A26A;
+    background-color: #1E90FF;
     border-radius: 40px;
     padding: 15px 40px 15px 40px;
     cursor: pointer;
 }
 
 footer {
+    flex-shrink: 0;
     background-color: #71D578;
     color: white;
 }
@@ -31,6 +32,8 @@ footer {
     }
 
     .navbar {
+        position: fixed;
+        top: 0;
         height: 56px;
         border-bottom: 1px solid #0D4A27;
 
@@ -53,6 +56,8 @@ footer {
     }
     
     .navbar {
+        position: fixed;
+        top: 0;
         height: 56px;
         border-bottom: 1px solid #0D4A27;
 
